# nacl_win

./: CHANGELOG.md  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: bridge_generated.dart  bridge_generated.h  nacl_win.dart
sodium_key_generator/: Cargo.toml
sodium_key_generator/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  main.rs
windows/: CMakeLists.txt  nacl_win_plugin.cpp  nacl_win_plugin.h  nacl_win_plugin_c_api.cpp
windows/include/nacl_win/: nacl_win_plugin_c_api.h
windows/sodium_key_generator/: sodium_key_generator.lib
