[package]
name = "sodium_key_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodiumoxide = "0.2.7"
anyhow = { version = "1.0" }
thiserror = "1.0"
flutter_rust_bridge = "1.45.0"

[lib]
crate-type = ["dylib"]